plugins/kotlin/idea/tests/testData/highlighter/TooManyArguments.kt
// IGNORE_K2
fun <symbolName descr="null">fooxxx</symbolName>() {}

fun <symbolName descr="null">main</symbolName>() {
    <symbolName descr="null">fooxxx</symbolName>(<error descr="[TOO_MANY_ARGUMENTS]" textAttributesKey="ERRORS_ATTRIBUTES">"asdasd"</error>)
}